sonar_sample/sonarqube-helm/templates/deployment-sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        fsGroup: 1000  # Helps with volume permissions
      containers:
        - name: sonarqube
          image: docker.io/sonarqube:lts  # ✅ Added full path to image
          ports:
            - containerPort: 9000
