sonar_sample/sonarqube-helm/templates/sonarqube-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: sonarqube  # Ensure PostgreSQL is in the same namespace
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
