sonar_sample/sonarqube-helm/templates/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube  # Ensure it's in the correct namespace
spec:
  type: LoadBalancer  # Exposes SonarQube externally
  selector:
    app: sonarqube
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
